k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-calculator
spec:
  selector:
    app: health-calculator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
